objects/tffa__PartyAgeMatrix__c.object
<CustomObject>
    <description>Defines rules for computing age related party attributes. e.g. &quot;is minor&quot; - a party under the age of 18, &quot;is major (or super minor)&quot; - a party who is 16 or over but under the age of 18. These attributes are generally computed based on age only. Additional complexity arises when the bounds used for computing these vary by region - country, state, etc.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AgeFrom__c</fullName>
        <description>Lower bound on age of party that activates this rule. A fact.</description>
        <label>Age (from)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__AgeTo__c</fullName>
        <description>Upper bound on age of party that activates this rule. A fact.</description>
        <label>Age (to)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Country__c</fullName>
        <description>The country of the party. A fact.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddressCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsMajor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the party based on facts provided should be regarded as a major (or super minor). An outcome.</description>
        <label>Is Major</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsMinor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the party based on facts provided should be regarded as a minor. An outcome.</description>
        <label>Is Minor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of records. Useful when making a selection from possible matches representing the output of an evaluation. In such cases, records with lower SortOrder values are selected.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StateSet__c</fullName>
        <description>A set of states (geographical region of a country) used as a fact. Supports multiple values (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;AL;AK;</inlineHelpText>
        <label>State (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Party Age Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__AgeFrom__c</columns>
        <columns>tffa__AgeTo__c</columns>
        <columns>tffa__StateSet__c</columns>
        <columns>tffa__Country__c</columns>
        <columns>tffa__IsMinor__c</columns>
        <columns>tffa__IsMajor__c</columns>
        <columns>tffa__Disabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Party Age Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>